[gd_scene load_steps=2 format=3 uid="uid://by2wdssw2e3sq"]

[ext_resource type="Script" path="res://Main.gd" id="1_4vqxa"]

[node name="Login" type="Node2D"]
script = ExtResource("1_4vqxa")

[node name="Submit" type="Button" parent="."]
offset_left = 524.0
offset_top = 357.0
offset_right = 644.0
offset_bottom = 388.0
text = "Submit
"

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 516.0
offset_top = 264.0
offset_right = 649.0
offset_bottom = 332.0

[connection signal="pressed" from="Submit" to="." method="_on_submit_pressed"]
