[gd_scene load_steps=2 format=3 uid="uid://bqw5iim7r3cji"]

[ext_resource type="Script" path="res://Main.gd" id="1_2prlx"]

[node name="Main" type="Node2D"]
script = ExtResource("1_2prlx")

[node name="Play" type="Button" parent="."]
offset_left = 368.0
offset_top = 192.0
offset_right = 784.0
offset_bottom = 256.0
text = "Play
"

[node name="Quit" type="Button" parent="."]
offset_left = 368.0
offset_top = 272.0
offset_right = 784.0
offset_bottom = 336.0
text = "Quit"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
